// Wiregost - Golang Exploitation Framework
// Copyright Â© 2020 Para
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package module;

option go_package = "modulepb";


import "module/module.proto";
import "module/stack.proto";

// ModuleRPC - Module calls and responses between client and server.
service ModuleRPC {

        // Module commands
        rpc RunModule(ModuleActionRequest) returns (ModuleAction);
        rpc SetOption(ModuleSetOptionRequest) returns (ModuleSetOption);

        // Stack commands
        rpc UseModule(StackUseRequest) returns (StackUse);
        rpc PopModule(StackPopRequest) returns (StackPop);
}
